# signature-poc

./: .gitignore  .pre-commit-config.yaml  README.md  base62.py  config.py  helpers.py  poc.py  pyproject.toml  retrieve.py  sign.py
output/: painted_pixels  painted_pixels_encoded
tests/: test_base62.py  test_helpers.py
